# devcleaner

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: app.rs  components.rs  crossterm.rs  lib.rs  ui.rs
