[package]
name = "devclean"
author = "Tim Rach <info@timrach.de>"
description = "Command line tool for finding and deleting development dependencies on your hard drive"
version = "0.9.0"
edition = "2021"
readme = "Readme.md"
license = "MIT"

[dependencies]
clap = {version="3.2", features=["derive"]}
crossterm = { version = "0.25", features = [ "serde" ] }
num-traits = "0.2.15"
trash = "2.1.5"
tui = { version = "0.19.0", default-features = false, features = ['crossterm', 'serde'] }
walkdir = "2.3"

[profile.release]
opt-level = 3
strip = "debuginfo"
lto = true
